<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Android Studio Tutorials: Kotlin Edition</string>
    <string name="app_version">Version %1$s (%2$d)</string>
    <string name="app_description">Learn how to make simple apps in Android Studio. 📱</string>
    <string name="copyright">© Copyright %1s made by D4rK!</string>
    <string name="made_in">Made with ❤ in Romania!</string>
    <string name="mail_to_dev">Email to dev</string>
    <string name="home">Home</string>
    <string name="android_studio">Android Studio</string>
    <string name="about">About</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="xda" translatable="false">XDA</string>
    <string name="code_kotlin" translatable="false">Kotlin</string>
    <string name="layout_xml" translatable="false">XML</string>
    <string name="bulgarian" translatable="false">Български</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="hungarian" translatable="false">Magyar</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="indonesian" translatable="false">Bahasa Indonesia</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="polish" translatable="false">Polski</string>
    <string name="romanian" translatable="false">Română</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="audiowide" translatable="false">Audiowide</string>
    <string name="fira_code" translatable="false">Fira Code</string>
    <string name="jetbrains_mono" translatable="false">JetBrains Mono</string>
    <string name="noto_sans_mono" translatable="false">Noto Sans Mono</string>
    <string name="poppins" translatable="false">Poppins</string>
    <string name="roboto_mono" translatable="false">Roboto Mono</string>
    <string name="google_dev">Google Dev</string>
    <string name="more">More</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="license">License</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="code_of_conduct">Code of conduct</string>
    <string name="check_for_updates">Check for updates…</string>
    <string name="feedback">Feedback</string>
    <string name="changelog">Changelog</string>
    <string name="more_apps">More apps…</string>
    <string name="internet">Internet [INTERNET]</string>
    <string name="normal">Normal</string>
    <string name="rate_us">Rate our app!</string>
    <string name="appearance">Appearance</string>
    <string name="permissions">Permissions</string>
    <string name="theme">Theme</string>
    <string name="bottom_navigation_bar_labels">Bottom navigation bar labels</string>
    <string name="settings">Settings</string>
    <string name="android_sdk">Android SDKs</string>
    <string name="android_start">Start a new project…</string>
    <string name="show_dialog">Show Alert Dialog</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="title_alert_dialog">Your title</string>
    <string name="no_kotlin_code_needed">No Kotlin code required for this activity.</string>
    <string name="current_time">Current Time</string>
    <string name="change_time">Change Time</string>
    <string name="timepicker">Time Picker</string>
    <string name="more_about_view_binding">More about View Binding</string>
    <string name="setup_instructions">Setup instructions</string>
    <string name="use_view_binding_in_activities">Use view binding in activities</string>
    <string name="use_view_binding_in_fragments">Use view binding in fragments</string>
    <string name="view_binding">View Binding</string>
    <string name="support_me">Support me.</string>
    <string name="clock">Clock</string>
    <string name="clock_analog">Analog Clock</string>
    <string name="clock_text">Text Clock</string>
    <string name="clock_digital">Digital Clock</string>
    <string name="datepicker">Date Picker</string>
    <string name="current_date">Current Date</string>
    <string name="change_date">Change Date</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="button_normal">Button 1 (normal)</string>
    <string name="button_outlined">Button 2 (outlined)</string>
    <string name="button_elevated">Button 3 (elevated)</string>
    <string name="toggle">Toggle</string>
    <string name="textbox">Text Box</string>
    <string name="toggle_me">Toggle me</string>
    <string name="type_here">Type here…</string>
    <string name="print_text">Print text.</string>
    <string name="open_me">Open me :)</string>
    <string name="share">Share</string>
    <string name="share_subject">Try it now!!!</string>
    <string name="share_using">Share using…</string>
    <string name="buttons">Buttons</string>
    <string name="webview">WebView</string>
    <string name="firebase">Firebase</string>
    <string name="labeled">Labeled</string>
    <string name="selected">Selected</string>
    <string name="unlabeled">Unlabeled</string>
    <string name="follow_system">Follow System Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="auto_battery_mode">Auto Battery Dark Mode</string>
    <string name="password">Password</string>
    <string name="password_show">Show password.</string>
    <string name="ad_id">Ad id [AD_ID]</string>
    <string name="app_updates">App updates</string>
    <string name="subscribe_to_beta">Subscribe to beta updates</string>
    <string name="language">Language</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="general">General</string>
    <string name="refactoring">Refactoring</string>
    <string name="writing_code">Writing code</string>
    <string name="build_and_run">Build &amp; run</string>
    <string name="debugging">Debugging</string>
    <string name="version_control">Version control &amp; local history</string>
    <string name="navigation_and_searching">Navigation &amp; searching</string>
    <string name="choose_your_option">Choose your option</string>
    <string name="first_radio_option">Option 1</string>
    <string name="second_radio_option">Option 2</string>
    <string name="display_option">Display option</string>
    <string name="show_code">Show code</string>
    <string name="access_network_state">Access network state [ACCESS_NETWORK_STATE]</string>
    <string name="post_notifications">Post notifications [POST_NOTIFICATIONS]</string>
    <string name="check_license">Check license [CHECK_LICENSE]</string>
    <string name="foreground_service">Foreground service [FOREGROUND_SERVICE]</string>
    <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
    <string name="question_1">What is Android Studio Tutorials: Kotlin Edition?</string>
    <string name="question_2">How can I download Android Studio Tutorials: Kotlin Edition?</string>
    <string name="question_3">Is Android Studio Tutorials: Kotlin Edition available for iOS devices?</string>
    <string name="question_4">Is Android Studio Tutorials: Kotlin Edition suitable for beginners?</string>
    <string name="question_5">Is Android Studio Tutorials: Kotlin Edition updated regularly?</string>
    <string name="question_6">How can I get support if I have a question or problem with Android Studio Tutorials: Kotlin Edition?</string>
    <string name="question_7">How do I disable Firebase analytics and crashlytics in Android Studio Tutorials: Kotlin Edition?</string>
    <string name="question_8">How do I check for updates to Android Studio Tutorials: Kotlin Edition?</string>
    <string name="question_9">How can I support the development of Android Studio Tutorials: Kotlin Edition?</string>
    <string name="summary_preference_faq_1">Android Studio Tutorials: Kotlin Edition is a free and open-source app that provides a collection of video tutorials on how to use Android Studio, the official integrated development environment (IDE) for Android app development.</string>
    <string name="summary_preference_faq_2">Android Studio Tutorials: Kotlin Edition is available for download on the Google Play Store. Simply search for \"Android Studio Tutorials\" in the Play Store app on your Android device and tap \"Install\&quot; to download and install the app.</string>
    <string name="summary_preference_faq_3">No, Android Studio Tutorials: Kotlin Edition is currently only available for Android devices.</string>
    <string name="summary_preference_faq_4">Yes, Android Studio Tutorials: Kotlin Edition is suitable for beginners who are new to Android app development and want to learn how to use Android Studio. The app provides a range of video tutorials that cover the basics of using Android Studio, from installing the IDE to building and deploying your first app.</string>
    <string name="summary_preference_faq_5">Yes, Android Studio Tutorials: Kotlin Edition is updated regularly with new video tutorials and content to keep users up-to-date with the latest features and changes in Android Studio.</string>
    <string name="summary_preference_faq_6">If you have a question or problem with Android Studio Tutorials: Kotlin Edition, you can contact us through the app\'s support page or by email at d4rk7355608@gmail.com. We\'ll do our best to help you resolve any issues you may be experiencing.</string>
    <string name="summary_preference_faq_7">You can disable Firebase analytics and crashlytics by going to the settings menu in the app and toggle the switch for these features.</string>
    <string name="summary_preference_faq_8">You can check for updates to Android Studio Tutorials: Kotlin Edition by going to the settings menu in the app and selecting the \"Check for updates\" option.</string>
    <string name="summary_preference_faq_9">ou can support the development of Android Studio Tutorials: Kotlin Edition by leaving a positive review on the Google Play Store, sharing the app with friends and colleagues, and supporting the developers through the \"Share\" option in the settings menu.</string>
    <string name="summary_preference_permissions_internet">Used to send error reports.</string>
    <string name="summary_preference_permissions_ad_id">Used to allow ads to be shown in Android 13+ devices.</string>
    <string name="summary_preference_permissions_post_notifications">Used to show notifications on Android 13+ devices.</string>
    <string name="summary_preference_permissions_check_license">Used to verify that the app is being used in accordance with the terms of the license agreement, and to enforce licensing terms and protect intellectual property.</string>
    <string name="summary_preference_permissions_foreground_service">Used to create and use services that run in the foreground, giving them priority over other background processes and improving performance and reliability.</string>
    <string name="summary_preference_permissions_access_notification_policy">Used to access and modify the notification policy of the device, controlling how and when notifications are shown to the user and providing custom notification management features.</string>
    <string name="tooltip_show_code">Show code syntax</string>
</resources>