<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference
        app:title="@string/question_1"
        app:summary="@string/summary_preference_faq_1"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_2"
        app:summary="@string/summary_preference_faq_2"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_3"
        app:summary="@string/summary_preference_faq_3"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_4"
        app:summary="@string/summary_preference_faq_4"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_5"
        app:summary="@string/summary_preference_faq_5"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_6"
        app:summary="@string/summary_preference_faq_6"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_7"
        app:summary="@string/summary_preference_faq_7"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_8"
        app:summary="@string/summary_preference_faq_8"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
    <androidx.preference.Preference
        app:title="@string/question_9"
        app:summary="@string/summary_preference_faq_9"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>
</androidx.preference.PreferenceScreen>