<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        app:title="@string/normal"
        app:iconSpaceReserved="false">
        <androidx.preference.Preference
            app:title="@string/internet"
            app:summary="@string/summary_preference_permissions_internet"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/access_network_state"
            app:summary="@string/summary_preference_permissions_internet"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/ad_id"
            app:summary="@string/summary_preference_permissions_ad_id"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/post_notifications"
            app:summary="@string/summary_preference_permissions_post_notifications"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/check_license"
            app:summary="@string/summary_preference_permissions_check_license"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/foreground_service"
            app:summary="@string/summary_preference_permissions_foreground_service"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
        <androidx.preference.Preference
            app:title="@string/access_notification_policy"
            app:summary="@string/summary_preference_permissions_access_notification_policy"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>