<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        app:title="@string/appearance"
        android:icon="@drawable/ic_appearance_tinted">
        <androidx.preference.ListPreference
            app:defaultValue="@string/theme_def_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            android:icon="@drawable/ic_theme"
            app:key="@string/theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/app_updates"
        android:icon="@drawable/ic_play_store_tinted">
        <androidx.preference.Preference
            android:icon="@drawable/ic_update"
            app:title="@string/check_for_updates">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.d4rk.androidtutorials"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_experimental"
            app:title="@string/subscribe_to_beta">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/apps/testing/com.d4rk.androidtutorials"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:key="changelog"
            android:icon="@drawable/ic_changelog"
            app:title="@string/changelog"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/privacy_and_security"
        android:icon="@drawable/ic_safety_check_tinted">
        <androidx.preference.Preference
            android:icon="@drawable/ic_privacy_policy"
            app:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/apps/privacy-policy"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_terms_of_service"
            app:title="@string/terms_of_service">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/apps/terms-of-service"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_code_of_conduct"
            app:title="@string/code_of_conduct">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://sites.google.com/view/d4rk7355608/more/code-of-conduct"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_permissions"
            app:title="@string/permissions">
            <intent
                android:targetPackage="com.d4rk.androidtutorials"
                android:targetClass="com.d4rk.androidtutorials.ui.permissions.PermissionsActivity"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:icon="@drawable/ic_license"
            app:title="@string/license"
            android:summary="@string/summary_preference_license">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.gnu.org/licenses/gpl-3.0"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        app:title="@string/more"
        android:icon="@drawable/ic_more">
        <androidx.preference.Preference
            android:icon="@drawable/ic_feedback"
            app:title="@string/feedback">
            <intent
                android:targetPackage="com.d4rk.androidtutorials"
                android:targetClass="com.d4rk.androidtutorials.ui.feedback.FeedbackActivity"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            app:key="share"
            android:icon="@drawable/ic_share"
            app:title="@string/share"/>
        <androidx.preference.Preference
            app:key="more_apps"
            android:icon="@drawable/ic_shop"
            app:title="@string/more_apps"/>
        <androidx.preference.Preference
            android:icon="@drawable/ic_support"
            app:title="@string/support_me"
            android:summary="@string/summary_preference_support_me">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://bit.ly/3p8bpjj"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>