<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_option"
        android:layout_margin="24dp"
        app:fontFamily="@font/font_poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_first_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_radio_option"
            android:checked="true"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_second_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_radio_option"/>
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/button_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_option"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:id="@+id/floating_button_show_syntax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/tooltip_show_code"
        android:text="@string/show_code"
        android:textSize="14sp"
        android:tooltipText="@string/tooltip_show_code"
        app:icon="@drawable/ic_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>