<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.Preference
        app:title="@string/general"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.GeneralShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/refactoring"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.RefactoringShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/build_and_run"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.BuildShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/debugging"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.DebuggingShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/navigation_and_searching"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.NavigationAndSearchingShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/writing_code"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.CodeShortcutsActivity"/>
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:title="@string/version_control"
        app:icon="@drawable/ic_shortcut"
        app:useSimpleSummaryProvider="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.d4rk.androidtutorials"
            android:targetClass="com.d4rk.androidtutorials.ui.android.shortcuts.tabs.VersionControlShortcutsActivity"/>
    </androidx.preference.Preference>
</androidx.preference.PreferenceScreen>